--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/uuid": "^10.0.0",
     "apexcharts": "^4.1.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -40,7 +41,8 @@
     "simplebar-react": "^3.3.0",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
