--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "emoji-picker-react": "^4.12.2",
     "firebase": "^11.4.0",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.482.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-color": "^2.19.3",
